stop large links from overflowing

--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -933,6 +933,11 @@ code {
 
 }
 
+// stop giant links breaking my CSS
+a {
+  word-wrap: break-word;
+}
+
 
 // highlight
 
